# bmo-backend

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.build  Makefile  README.md  vcpkg.json
app/: entrypoint.sh
include/: headers.hpp
include/audio/: utterance_recorder.hpp
include/stt/: whisper_stt.hpp
include/wake/: wake_handler.hpp  wake_listener.hpp
python/: requirements.txt
python/wake/: wake_word.py
src/: main.cpp
src/audio/: utterance_recorder.cpp
src/stt/: capture_stt.cpp  whisper_stt.cpp
src/wake/: wake_handler.cpp  wake_listener.cpp
src/whisper/: whisper_stt.cpp
